# sheldon-cross

./: .gitignore  Cargo.toml  Dockerfile  README.md  render.rs
.github/workflows/: build.yaml  main.yaml  main.yml
docker/: Dockerfile  Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.aarch64-unknown-linux-musl  Dockerfile.armv7-unknown-linux-gnueabihf  Dockerfile.armv7-unknown-linux-musleabihf  Dockerfile.x86_64-unknown-linux-gnu  Dockerfile.x86_64-unknown-linux-musl  install_git.sh  install_openssl.sh
src/: Dockerfile  main.rs
