[package]
name = "sheldon-cross"
version = "0.0.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.54"
clap = { version = "3.1.1", features = ["derive"] }
handlebars = "4.2.1"
serde_json = "1.0.79"

[[bin]]
name = "sheldon-cross"
path = "render.rs"
